force-app/main/default/objects/Account/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <inlineHelpText>TFA defined cluster.</inlineHelpText>
    <label>Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Albany</fullName>
            </value>
            <value>
                <fullName>Albury</fullName>
            </value>
            <value>
                <fullName>Alice Springs</fullName>
            </value>
            <value>
                <fullName>Ararat</fullName>
            </value>
            <value>
                <fullName>Armidale</fullName>
            </value>
            <value>
                <fullName>Auburn</fullName>
            </value>
            <value>
                <fullName>Bankstown</fullName>
            </value>
            <value>
                <fullName>Barkly</fullName>
            </value>
            <value>
                <fullName>Barkly Remote</fullName>
            </value>
            <value>
                <fullName>Barwon</fullName>
            </value>
            <value>
                <fullName>Batemans Bay</fullName>
            </value>
            <value>
                <fullName>Bathurst</fullName>
            </value>
            <value>
                <fullName>Baw Baw/South Gippsland</fullName>
            </value>
            <value>
                <fullName>Bayside Peninsula</fullName>
            </value>
            <value>
                <fullName>Belconnen</fullName>
            </value>
            <value>
                <fullName>Bendigo</fullName>
            </value>
            <value>
                <fullName>Beverly Hills</fullName>
            </value>
            <value>
                <fullName>Big Rivers Remote</fullName>
            </value>
            <value>
                <fullName>Blue Mountains</fullName>
            </value>
            <value>
                <fullName>Bondi</fullName>
            </value>
            <value>
                <fullName>Botany Bay</fullName>
            </value>
            <value>
                <fullName>Boulburn</fullName>
            </value>
            <value>
                <fullName>Brimbank Melton</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Brisbane Water</fullName>
            </value>
            <value>
                <fullName>Broome</fullName>
            </value>
            <value>
                <fullName>Bunbury</fullName>
            </value>
            <value>
                <fullName>Bungarribee</fullName>
            </value>
            <value>
                <fullName>Callaghan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>