force-app/main/default/objects/Account/fields/Cluster_Hub__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Hub__c</fullName>
    <inlineHelpText>TFA defined cluster hub. Drive distance to cluster hub is maximum 60km.</inlineHelpText>
    <label>Cluster Hub</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cluster__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>103 Flinders Lane</fullName>
            </value>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Albany</fullName>
            </value>
            <value>
                <fullName>Alice Springs</fullName>
            </value>
            <value>
                <fullName>Ararat</fullName>
            </value>
            <value>
                <fullName>Ballarat</fullName>
            </value>
            <value>
                <fullName>Barkly Remote</fullName>
            </value>
            <value>
                <fullName>Bathurst</fullName>
            </value>
            <value>
                <fullName>Benalla</fullName>
            </value>
            <value>
                <fullName>Bendigo</fullName>
            </value>
            <value>
                <fullName>Big Rivers Remote</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Broome</fullName>
            </value>
            <value>
                <fullName>Bunbury</fullName>
            </value>
            <value>
                <fullName>Canberra</fullName>
            </value>
            <value>
                <fullName>Central Remote</fullName>
            </value>
            <value>
                <fullName>Cobram</fullName>
            </value>
            <value>
                <fullName>Colac</fullName>
            </value>
            <value>
                <fullName>Corowa</fullName>
            </value>
            <value>
                <fullName>Craigieburn</fullName>
            </value>
            <value>
                <fullName>Cranbourne West</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Devonport</fullName>
            </value>
            <value>
                <fullName>Doveton</fullName>
            </value>
            <value>
                <fullName>Dowerin</fullName>
            </value>
            <value>
                <fullName>Dubbo</fullName>
            </value>
            <value>
                <fullName>East Arnhem Remote</fullName>
            </value>
            <value>
                <fullName>Echuca</fullName>
            </value>
            <value>
                <fullName>Esperance</fullName>
            </value>
            <value>
                <fullName>Euroa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>