force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Department defined region</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State_dependant_picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Adelaide Hills and Fleurieu</fullName>
            </value>
            <value>
                <fullName>Adelaide Plains</fullName>
            </value>
            <value>
                <fullName>Albany</fullName>
            </value>
            <value>
                <fullName>Barkly</fullName>
            </value>
            <value>
                <fullName>Big Rivers</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Bunbury</fullName>
            </value>
            <value>
                <fullName>Canberra Goulburn</fullName>
            </value>
            <value>
                <fullName>Central (Alice Springs)</fullName>
            </value>
            <value>
                <fullName>Central Desert</fullName>
            </value>
            <value>
                <fullName>Central QLD</fullName>
            </value>
            <value>
                <fullName>Central West QLD</fullName>
            </value>
            <value>
                <fullName>Cocos Island</fullName>
            </value>
            <value>
                <fullName>Connected Communities NSW</fullName>
            </value>
            <value>
                <fullName>Darling Downs South West QLD</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>East Arnhem</fullName>
            </value>
            <value>
                <fullName>Eyre and Western</fullName>
            </value>
            <value>
                <fullName>Far North</fullName>
            </value>
            <value>
                <fullName>Far North QLD</fullName>
            </value>
            <value>
                <fullName>Fitzroy Crossing</fullName>
            </value>
            <value>
                <fullName>Geraldton</fullName>
            </value>
            <value>
                <fullName>Goldfields</fullName>
            </value>
            <value>
                <fullName>Greater Hobart</fullName>
            </value>
            <value>
                <fullName>Hunter</fullName>
            </value>
            <value>
                <fullName>Kangaroo Island</fullName>
            </value>
            <value>
                <fullName>Karratha</fullName>
            </value>
            <value>
                <fullName>Katanning</fullName>
            </value>
            <value>
                <fullName>Kimberley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>