force-app/main/default/objects/Account/recordTypes/Account_One_to_One.recordType-meta.xml
<RecordType>
    <fullName>Account_One_to_One</fullName>
    <active>true</active>
    <description>Account One-to-One Record Type - Account Record Type to be used for the One-to-One Model in NPSP Settings. It is recommended that you specify an Account Record Type that is used solely for One-to-One Accounts.</description>
    <label>Account One-to-One</label>
</RecordType>