force-app/main/default/objects/Account/recordTypes/Bodies_and_Associations.recordType-meta.xml
<RecordType>
    <fullName>Bodies_and_Associations</fullName>
    <active>true</active>
    <description>Organisations that do not fall into the other categories but are still important to TFA (eg: think-tanks, principal associations)</description>
    <label>Bodies and Associations</label>
</RecordType>