force-app/main/default/objects/Account/recordTypes/Community.recordType-meta.xml
<RecordType>
    <fullName>Community</fullName>
    <active>true</active>
    <description>Nonprofit organisations that work within the same area of TFA – disadvantage, indigenous, or education.</description>
    <label>Community</label>
</RecordType>