force-app/main/default/objects/Account/recordTypes/Development.recordType-meta.xml
<RecordType>
    <fullName>Development</fullName>
    <active>true</active>
    <description>Organisations that support causes through funding and/or pro bono support; this includes corporations, trusts &amp; foundations, bequests, and high net worth individuals.</description>
    <label>Philanthropy</label>
</RecordType>