force-app/main/default/objects/Account/recordTypes/Government.recordType-meta.xml
<RecordType>
    <fullName>Government</fullName>
    <active>true</active>
    <description>Organisations that are part of the federal, state, or local governments or are non-government approved authorities (such as the Catholic Education Offices).</description>
    <label>Government &amp; Approved Authorities</label>
</RecordType>