force-app/main/default/objects/Account/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>Individual organisation record to be used by the Donations Profile for online donations without an organisation</description>
    <label>Individual</label>
</RecordType>