force-app/main/default/objects/Account/recordTypes/Media.recordType-meta.xml
<RecordType>
    <fullName>Media</fullName>
    <active>true</active>
    <description>Organisations focused on media including newspapers, TV, and online content.</description>
    <label>Media</label>
</RecordType>