force-app/main/default/objects/Account/recordTypes/Other_Organisations.recordType-meta.xml
<RecordType>
    <fullName>Other_Organisations</fullName>
    <active>true</active>
    <description>Organisations that could play a role in supporting TFA but do not fit into the other organisation categories. These include nonprofits, peak bodies, think tanks, unions, student groups, and political parties.</description>
    <label>Other Organisations</label>
</RecordType>