force-app/main/default/objects/Account/recordTypes/Philanthropic.recordType-meta.xml
<RecordType>
    <fullName>Philanthropic</fullName>
    <active>true</active>
    <description>Organisations that are focused on supporting causes and issues through funding.</description>
    <label>Philanthropic</label>
</RecordType>