force-app/main/default/objects/Account/recordTypes/Service_Provider.recordType-meta.xml
<RecordType>
    <fullName>Service_Provider</fullName>
    <active>true</active>
    <description>Organisations that provide goods or services to TFA (related to the running and operations of our organisation, eg: internet provider)</description>
    <label>Service Provider</label>
</RecordType>