force-app/main/default/objects/Account/recordTypes/TFA_Staff.recordType-meta.xml
<RecordType>
    <fullName>TFA_Staff</fullName>
    <active>true</active>
    <description>TFA Staff record.</description>
    <label>TFA Staff</label>
</RecordType>