force-app/main/default/objects/Account/validationRules/Federal_Electorate_required_for_schools.validationRule-meta.xml
<ValidationRule>
    <fullName>Federal_Electorate_required_for_schools</fullName>
    <active>true</active>
    <description>Federal Electorate is Mandatory for all Currently Participating Schools.</description>
    <errorConditionFormula>OR ( 
ISPICKVAL(Level_of_Participation__c, &apos;Participating - Current&apos;), 
ISPICKVAL( TTL_Level_of_Participation__c , &apos;Participating - Current&apos;)) 
&amp;&amp; 
ISBLANK( TEXT( Federal_Electorate__c)) 
&amp;&amp; 
RecordType.DeveloperName = &quot;School&quot;</errorConditionFormula>
    <errorMessage>Federal Electorate is Mandatory for all Currently Participating Schools</errorMessage>
</ValidationRule>