force-app/main/default/objects/Account/validationRules/Government_Legislative_Status_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Government_Legislative_Status_required</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Id = &apos;012C00000007pTl&apos; &amp;&amp;   ISPICKVAL(Government_Type__c, &apos;Legislative&apos;) &amp;&amp; 
ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status is required for all &apos;Legislative&apos; Government records.</errorMessage>
</ValidationRule>