force-app/main/default/objects/Account/validationRules/Government_Multistate_value_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Government_Multistate_value_required</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Id = &apos;012C00000007pTl&apos; &amp;&amp; ISPICKVAL( State_dependant_picklist__c, &apos;Multi-State&apos;) &amp;&amp; 
ISBLANK( Multi_State__c)</errorConditionFormula>
    <errorDisplayField>Multi_State__c</errorDisplayField>
    <errorMessage>For Multi-State records, you must indicate which States/Territories.</errorMessage>
</ValidationRule>