force-app/main/default/objects/Account/validationRules/MultiCampus_Names_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MultiCampus_Names_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Campus_Names__c )  &amp;&amp;  NOT(ISNULL(Multi_Campus_School__c ))</errorConditionFormula>
    <errorDisplayField>Campus_Names__c</errorDisplayField>
    <errorMessage>Please list Campus names.</errorMessage>
</ValidationRule>