force-app/main/default/objects/Account/validationRules/Support_Structure_Comments_Needed_School.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_Structure_Comments_Needed_School</fullName>
    <active>true</active>
    <errorConditionFormula>Strong_support_structure_and_culture__c  = True
&amp;&amp;
ISBLANK(Support_Structure_Comments__c)</errorConditionFormula>
    <errorDisplayField>Support_Structure_Comments__c</errorDisplayField>
    <errorMessage>Please add comments around support structure in place.</errorMessage>
</ValidationRule>