force-app/main/default/objects/Account/listViews/All_Dev_Orgs_WITHOUT_Funding_Focus.listView-meta.xml
<ListView>
    <fullName>All_Dev_Orgs_WITHOUT_Funding_Focus</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Sector__c</columns>
    <columns>Engagement_Status__c</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <columns>Funder_Status__c</columns>
    <columns>npsp__Funding_Focus__c</columns>
    <columns>Funding_information__c</columns>
    <columns>Funding_Geographical_Area__c</columns>
    <columns>Funding_Profile_Notes__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Development</value>
    </filters>
    <filters>
        <field>Funding_Geographical_Area__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Account_Owner_Full_Name__c</field>
        <operation>equals</operation>
        <value>Steph Hutson</value>
    </filters>
    <label>All Dev Orgs WITHOUT Funding Focus</label>
    <sharedTo>
        <role>Development_Director</role>
    </sharedTo>
</ListView>