force-app/main/default/objects/Account/listViews/All_Development_Organisations.listView-meta.xml
<ListView>
    <fullName>All_Development_Organisations</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Sector__c</columns>
    <columns>Engagement_Status__c</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Development</value>
    </filters>
    <label>All Development Organisations</label>
</ListView>