force-app/main/default/objects/Account/listViews/All_Development_Organisations_ALL_RTs.listView-meta.xml
<ListView>
    <fullName>All_Development_Organisations_ALL_RTs</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sector__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Corporate,Account.Philanthropic</value>
    </filters>
    <label>All Development Orgs (To be reviewed)</label>
</ListView>