force-app/main/default/objects/Account/listViews/All_Government_to_be_reviewed.listView-meta.xml
<ListView>
    <fullName>All_Government_to_be_reviewed</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Sector__c</columns>
    <columns>Engagement_Status__c</columns>
    <columns>Government_Type__c</columns>
    <columns>Status__c</columns>
    <columns>State_dependant_picklist__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <columns>Data_Cleanse_tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Government</value>
    </filters>
    <filters>
        <field>Data_Cleanse_tag__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Government (to be reviewed)</label>
</ListView>