force-app/main/default/objects/Account/listViews/All_Media_Organisations.listView-meta.xml
<ListView>
    <fullName>All_Media_Organisations</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Sector__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Media</value>
    </filters>
    <label>All Media Organisations</label>
</ListView>