force-app/main/default/objects/Account/listViews/All_Organisations_with_no_Record_Type.listView-meta.xml
<ListView>
    <fullName>All_Organisations_with_no_Record_Type</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>All Organisations (no Record Type)</label>
</ListView>