force-app/main/default/objects/Account/listViews/All_Other_Organisations.listView-meta.xml
<ListView>
    <fullName>All_Other_Organisations</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>State_dependant_picklist__c</columns>
    <columns>Sector__c</columns>
    <columns>Engagement_Status__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Data_Cleanse_tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Other_Organisations</value>
    </filters>
    <label>All Other Organisations</label>
</ListView>