force-app/main/default/objects/Account/listViews/All_Other_Organisations_to_be_reviewed.listView-meta.xml
<ListView>
    <fullName>All_Other_Organisations_to_be_reviewed</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sector__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Bodies_and_Associations,Account.Community</value>
    </filters>
    <label>All Other Organisations (to be reviewed)</label>
</ListView>